[tool.poetry]
name = "billplz"
version = "0.1.0"
description = ""
authors = ["Matthew Cross <mattyc246@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
twine = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
